# centris-ca-scrapper

./: README.md  pyproject.toml  quebec-houses.db
analisys/: centrisca.py  extract.ipynb  legchain.ipynb  operations.py  paginate.py  regions.py  requirement.txt  test.ipynb
scrapper/: address.py  city.py  database.py  extractor.py  main.py  paginate.py  residence.py
tests/: test_address.py  test_extractor.py  test_paginate.py  test_residence.py
